--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   path_provider: ^0.5.0+1
   # 数据库
   sqflite: ^1.1.3
-  # html库
+  # html片段库
   flutter_html_widget: ^0.0.2
-
+  # 网络检测库
+  connectivity: ^0.4.2+1
 
 
 
